# rodospy

./: .gitignore  INSTALL.md  LICENSE.txt  README.md  example.py  request_template.xml  rodos-qa.py  rodospy.py  setup.cfg  setup.py
docs/: INSTALL.md
examples/: example.py  example_vector.py  examples_basic.py  examples_extraction.py  examples_plotting.py
service/: pyramid.service
src/: .coveragerc  MANIFEST.in  README.txt  development.ini  production.ini  pytest.ini  rodospy.py  setup.py  testing.ini
src/rodospy/: INSTALL.md  rodospy.py  settings.py
src/rodospy/examples/: example.py
src/scenarioreporter/: routes.py  style_utils.py
src/scenarioreporter/alembic/: env.py
src/scenarioreporter/alembic/versions/: 20200226_637fda52db3f.py  20200408_146d72820e7c.py
src/scenarioreporter/models/: __init__.py  item.py  scenario.py  user.py
src/scenarioreporter/scripts/: initialize_db.py
src/scenarioreporter/static/: rodosweb.js  theme.css  theme_white.css
src/scenarioreporter/static/css/: autopuff.css  leaflet.timedimension.control.css  leaflet.timedimension.control.min.css
src/scenarioreporter/static/lib/: L.Control.MousePosition.js  leaflet.wmslegend.js  polyfill.js
src/scenarioreporter/templates/: 404.jinja2  grid_save.jinja2  item.jinja2  layout.jinja2  map.jinja2  mapserver.map.jinja2  project.jinja2  projects.jinja2  scenario.jinja2  scenarios.jinja2
src/scenarioreporter/views/: default.py  notfound.py
src/tests/: conftest.py  test_functional.py  test_some_utils.py  test_views.py
src/tests/data/: ground.sld
