[metadata]
name = rodospy
version = 2.0
author = Tuomas Peltonen
author_email = tuomas.peltonen@stuk.fi
description = Python interface for JRODOS WPS and REST services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StukFi/rodospy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
